<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/search_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.countries.ui.search.SearchActivity">


    <android.support.design.widget.AppBarLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:theme="@style/AppTheme.AppBarOverlay"
        android:background="@color/colorPrimary">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            >

            <EditText
                android:id="@+id/search_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:theme="@style/SearchEditText"
                android:inputType="textCapWords"
                android:textColor="@color/colorWhite"
                android:textSize="18sp"
                android:hint="@string/search_hint" />

            <ImageButton
                style="@style/Widget.AppCompat.Light.ActionButton"
                android:id="@+id/search_icon_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/ic_search"
                android:clickable="false"/>

        </android.support.v7.widget.Toolbar>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:elevation="5dp"
            android:background="@color/colorSpacer" />


    </android.support.design.widget.AppBarLayout>


    <com.countries.util.ui.MaterialProgressBar
        android:id="@+id/material_progress_bar"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="170dp"
        android:layout_gravity="center"
        android:visibility="gone"
        />

    <android.support.v7.widget.RecyclerView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/countries_recyclerview"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />


</LinearLayout>

