...
                    <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:id="@+id/capital"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="19sp"
                            android:textColor="@color/colorGrey"
                            android:paddingLeft="10dp"
                            android:paddingTop="5dp"
...
                    <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:id="@+id/language"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="19sp"
                            android:textColor="@color/colorGrey"
                            android:paddingLeft="10dp"
                            android:paddingTop="5dp"
...
