...
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:recyclerviewfastscroller="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.countrylist.MainActivity">


    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:theme="@style/AppTheme.AppBarOverlay"
        android:background="@color/colorPrimary">

        <LinearLayout
...
